# Policy_Gradient_Predictive_Coding

./: .dockerignore  .gitignore  Dockerfile  PROCGEN_MVP_PLAN.md  README.md  RUNPOD.md  pyproject.toml  requirements-gpu.txt  results_20260701_0635.tgz
.githooks/: commit-msg
configs/: bandit.yaml  bandit_inits.yaml  default.yaml  mujoco_ant.yaml  mujoco_ant_ppo.yaml  mujoco_ant_trpo.yaml  mujoco_halfcheetah.yaml  mujoco_halfcheetah_pc_actor_critic_bench.yaml  mujoco_halfcheetah_pc_actor_critic_sota.yaml  mujoco_halfcheetah_pc_reinforce_bench.yaml  mujoco_halfcheetah_pc_reinforce_sota.yaml  mujoco_halfcheetah_ppo.yaml  mujoco_halfcheetah_trpo.yaml  mujoco_hopper.yaml  mujoco_hopper_pc_actor_critic.yaml  mujoco_hopper_pc_actor_critic_bench.yaml  mujoco_hopper_pc_actor_critic_sota.yaml  mujoco_hopper_pc_reinforce.yaml  mujoco_hopper_pc_reinforce_bench.yaml  mujoco_hopper_pc_reinforce_sota.yaml  mujoco_hopper_ppo.yaml  mujoco_hopper_trpo.yaml  mujoco_humanoid.yaml  mujoco_inverted_pendulum.yaml  mujoco_walker2d.yaml  mujoco_walker2d_ppo.yaml  mujoco_walker2d_trpo.yaml  procgen_coinrun.yaml
docs/: BENCHMARK_PROTOCOL.md  MUJOCO_IMPLEMENTATION.md  PCPG_EXPLORATION_FINDINGS.md  PCPG_RUNPOD_GUIDE.md  PCPG_STABILITY_FLAGS.md  PCPG_TUNING_METHODOLOGY.md  pcpg_overview.pptx
scripts/: analyze_pcpg_logs.py  bandit_inits.py  debug_trpo.py  gen_benchmark_config.py  mdp_v1_tier1.py  plot_curve.py  run_bandit_comparison.py  run_bandit_multi_init.py  run_bandit_multi_seed.py  run_bench.sh  run_eval.py  run_experiment.py  run_mujoco_benchmark.py  run_mujoco_pcpg_sweep.py  run_pcpg_benchmark_matrix.py  run_pcpg_overnight_sweep.py  run_pcpg_runpod.sh  (+9 more)
(+359 files in other folders)
