[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-learned-planning"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Armin Sommer", email = "arminsommer@icloud.com" }]
dependencies = [
    "procgen-mirror>=0.10.7",   # Procgen with py3.11/3.12 wheels
    "gym3>=0.3.3",              # vectorized env interface used by procgen
    "numpy",
    "jax",
    "flax",
    "optax",
    "pyrallis",
    "pyyaml",
    "wandb",
    "matplotlib",
    "jpc @ git+https://github.com/thebuckleylab/jpc",  # predictive coding (equinox/diffrax)
    "brax>=0.10.0",                                    # MuJoCo via mjx backend
]

# Install with: pip install -e ".[gpu]"
# Requires CUDA 12 on the host (RunPod "PyTorch 2.x" base images ship this).
[project.optional-dependencies]
gpu = ["jax[cuda12]"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]